--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </section>
     <div class="container">
         <div class="header">
-            <h1>Meet the Team</h1>
+            <h1>Meet the Team Hiiiiiiiiiiii</h1>
             <p>At Sri Samhitha, our success is driven by the dedication and expertise of our team. Get to know the people behind our mission to make your real estate dreams a reality.</p>
         </div>
 
